@@ -20,6 +20,10 @@ v0.37.3		09-Apr-2003.
 		Added menu function display file.
 		Display ascii textfiles now uses the More Y/n/= prompt.
 
+	mbcico:
+		Removed some heavy debug code from ttyio functions to increase
+		throughput.
+
 	lang:
 		New language prompt number 17.
 		Erased language prompts 18..36.
